Workers and loop added